jilles      2006/06/29 22:19:27 UTC	(20060629-5600)
  Log:
  Revert accidental hyb7/ratbox -> hyb7/hybrid change in comment.
  

  Changes:	Modified:
  +1 -1		trunk/protocol/hybrid.c (File Modified) 


jilles      2006/06/29 13:00:14 UTC	(20060629-5596)
  Log:
  ChanServ FLAGS: allow /cs flags <target> to see one access entry.
  Requested by w00t.
  This adds some duplicate code, cs_cmd_flags() can use some refactoring.
  

  Changes:	Modified:
  +30 -1	trunk/modules/chanserv/flags.c (File Modified) 


jilles      2006/06/29 12:24:51 UTC	(20060629-5594)
  Log:
  add missing descriptions for ircd->uses_protect and ircd->uses_owner
  

  Changes:	Modified:
  +2 -2		trunk/doc/MODES (File Modified) 


jilles      2006/06/29 12:23:30 UTC	(20060629-5592)
  Log:
  ircnet m_njoin(): cause mlock checks when creating a channel
  

  Changes:	Modified:
  +2 -0		trunk/protocol/ircnet.c (File Modified) 


jilles      2006/06/28 22:51:01 UTC	(20060628-5590)
  Log:
  dreamforge/sorcery:
  - add a warning that missing U:lines may cause storms
    of mode changes
  - add a warning that these ircds do not protect services
    on channels against kick/deop
  

  Changes:	Modified:
  +14 -2	trunk/doc/IRCD (File Modified) 


jilles      2006/06/28 21:48:10 UTC	(20060628-5588)
  Log:
  dreamforge/sorcery:
  Do not assume all modes have a TS; only modes from servers
  and U:lined clients may have a TS and even then not always.
  channel_mode() does not mind an extraneous parameter.
  

  Changes:	Modified:
  +1 -1		trunk/protocol/dreamforge.c (File Modified) 
  +1 -1		trunk/protocol/sorcery.c (File Modified) 


jilles      2006/06/28 21:38:18 UTC	(20060628-5586)
  Log:
  dreamforge:
  - when creating a channel, op the service and set a TS (r5584)
  - allow JOIN messages with multiple channels (r5584)
  - do not process a QUIT message with a prefix designating one
    of our services (fake direction), these are generated on
    kills on services
  

  Changes:	Modified: